test/zinc_source/compile_errors/rust_interop/05_unknown_opaque_type.zn
// expected-error: extern rust impl references unknown type 'FileHandle'
extern rust {
    impl FileHandle {
        fn open(path: string) -> FileHandle;
    }
}

fn main() {
    print("unreachable")
}
